Create a separate Recommendation Server using Spray HTTP